# bevy_proto_tap

./: Cargo.toml  Trunk.toml  focus-manager.js  hello_wasm_bg.wasm  index.html  index.js  package.json
docs/: index.html  proto-tap-29f49150d3c08607.js  proto-tap-34e43dfed879a2b2.js  proto-tap-5645caf58351df34.js  proto-tap-714a52c0ffb3806d.js
pkg/: hello_world_bg.wasm  package.json
src/: main.rs
