[package]
name = "proto-tap"
version = "0.1.0"
authors = ["Cat-Person"]
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_asset",         # Assets 0_o
] }
bevy_prototype_lyon = "0.8.0"

[profile.release]
opt-level = 's'
lto = true

